# IRIS-X

./: README.md  SabertoothMotor.cpp  SabertoothMotor.h
ManualControl/: ManualControl.ino  pyTest.py
Odroid/: pyTest.py
Sabertooth/: ArduinoSerial.py  Move.py  SabertoothMotor.cpp  SabertoothMotor.h  SabertoothMotorTest.ino  SimpleROSCallback.ino
Sabertooth/Rust/: Cargo.toml  invoke.py
Sabertooth/Rust/src/: lib.rs  main.rs
arduino/: PublisherTest.py  controlPub.py  teleopSub.py
arduino/ArduinoSabertoothTest/: ArduinoSabertoothTest.ino
arduino/ArduinoSubTesting/: ArduinoSubTesting.ino
arduino/ROSController/: ROSController.ino
mapper/: README.md  SPEC.md
nbs/: CamVid_Depth_Object_Detection.ipynb
persee/: a.out  bmpGen.c  bmpGen.h  output  testout  transform.c
teleop/teleopDriveSub/: ArduinoSabertoothTest.ino
teleop/test_catkin_ws/devel/: .catkin  local_setup.sh
teleop/test_catkin_ws/devel/lib/pkgconfig/: teleop_test.pc
teleop/test_catkin_ws/devel/share/teleop_test/cmake/: teleop_testConfig.cmake
teleop/test_catkin_ws/src/teleop_test/: CMakeLists.txt
teleop/test_catkin_ws/src/teleop_test/scripts/: teleopPub.py
