[package]
name = "serial"
version = "0.1.0"
authors = ["iyaja <ajayuppili@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robust-arduino-serial = "0.1.1"
serial = "0.4"
std-semaphore = "0.1"

[lib]
name = "serial"
crate-type = ["dylib"]
